--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "tailwindcss": "^3.4.7"
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.10"
   }
 }
